--- a/3D Design/style.css
+++ b/3D Design/style.css
@@ -38,27 +38,26 @@ body {
 }
 
   /* Scroll-to-top button styles */
-  #scrollTopBtn {
-    display: none; /* Hidden by default */
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    z-index: 99;
-    font-size: 22px;
-    border: none;
-    outline: none;
-    background-color: #5300a0;
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 50%;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-    transition: 0.3s;
-  }
-
-  #scrollTopBtn:hover {
-    background-color: #37006d;
-  }
+#scrollTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 999;
+  font-size: 22px;
+  border: none;
+  outline: none;
+  background-color: #5300a0;
+  color: white;
+  cursor: pointer;
+  padding: 10px 15px;
+  border-radius: 50%;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+  transition: 0.3s;
+}
+#scrollTopBtn:hover {
+  background-color: #37006d;
+}
 
 .img-gradiant {
     position: absolute;
@@ -77,25 +76,60 @@ body {
     rotate: -30deg;
     z-index: -1;
 }
+
+.hero {
+  background-image: url("images/bg.jpg");
+  height: 100vh;
+  background-size: cover;
+  visibility: 50%;
+  position: relative;
+}
+.hero::after{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+}
 .hero .hcontainer {
     width: 100%;
     margin: 0 auto;
     padding: 0 2rem;
     position: relative;
     overflow: hidden;
+    z-index: 5;
 }
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 5rem;
+    position: relative;
 }
-header h1 {
-    margin: 0;
-    font-size: 3rem;
-    font-weight: 300;
+header::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 5rem;
+  width: calc(100% - 10rem);
+  height: 1px;
+  background-color: #bb89eb;
+}
+.logo{
+  display: flex;
+  align-items: center;
+}
+#logo-icon {
+  width: 60px;
 }
 
+header h1 {
+    margin: 0;
+    font-size: 2.5rem;
+    font-weight: 300;
+}
 nav {
     display: flex;
     align-items: center;
@@ -128,12 +162,12 @@ nav a:hover {
 /* Small screens */
 @media (max-width: 768px) {
   nav {
-    display: none; /* hide nav by default */
+    display: none;
     flex-direction: column;
-    background: #111111b8;
+    background: #111111cb;
     position: absolute;
     top: 70px;
-    right: 10px;
+    right: 0;
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(127,66,167,0.6);
@@ -152,21 +186,9 @@ nav a:hover {
   header {
     justify-content: space-between;
   }
-}
-.btn-signing {
-   background-color: #a7a7a7;
-   color: black; 
-   padding: .8rem 2rem;
-   border-radius: 50px;
-   border: none;
-   font-size: 1rem;
-   font-weight: 500;
-   transition:  background-color .2s ease;
-   cursor: pointer;
-   z-index: 999;
-}
-.btn-signing:hover{
-    background-color: white;
+  #logo-icon {
+    width: 50px;
+  }
 }
 main {
     display: flex;
@@ -174,8 +196,14 @@ main {
     justify-content: center;
     min-height: calc(90vh - 6rem);
 }
+main #earth-3d {
+  display: none;
+  margin-top: -2rem;
+  width: 390px;
+}
 main .content {
     max-width: 40rem;
+    margin-top: 5%;  
     margin-left: 10%;
     z-index: 999;
 }
@@ -186,10 +214,10 @@ main .content {
     border-radius: 50px;
     background: linear-gradient(to right, #656565, #7f42a7, #6600c5, #5300a0, #757575, #656565);;
     background-size: 200%;
-    animation: animationGradiant 2.5s linear infinite;
+    animation: animationGradient 2.5s linear infinite;
     box-shadow: 0 0 15px rgb(255, 255, 255 ,.3);
 }
-@keyframes animationGradiant {
+@keyframes animationGradient {
     to {
         background-position: 200%;
     }
@@ -235,9 +263,10 @@ main .content h1 {
     font-weight: 600px;
     letter-spacing: .1em;
     transition: background-color .2s ease;
+    background-color: #1a1a1a;
 }
 .btn-get-started:hover{
-    background-color: #1a1a1a;
+    background-color: #3430309c;
 }
 .btn-signing-main {
     text-decoration: none;
@@ -253,32 +282,16 @@ main .content h1 {
 .btn-signing-main:hover {
     background-color: gray;
 }
-.robot-3d {
-    position: absolute;
-    top: 0;
-    right:-20%;
-}
-.robot-3d::after {
-    content: "";
-    width: 200px;
-    height: 50px;
-    background-color: black;
-    position: absolute;
-    right: 0;
-    bottom: 20px;
-    z-index: 4;
-}
+
 @media (max-width:1300px) {
     header {
         padding: 1rem .5rem;
     }
-    .content {
-      margin-top: 85%;  
+    header::after {
+      width: calc(100% - 1rem);
+      left: .5rem;
     }
-    .robot-3d{
-        scale: .8;
-        top: -20%;
-        right: 2%;
+    .content {
     }
 }
 @media (max-width:768px) {
@@ -291,12 +304,8 @@ main .content h1 {
     .btn-signing {
         padding: .6rem 1.5rem;
     }
-    .robot-3d {
-        scale: .7;
-        margin-top: -3rem;
-    }
     main .content {
-        margin-top: 17rem;
+        margin-top: -2rem;
         margin-left: 10px;
         max-width: 30rem;
     }
@@ -314,15 +323,25 @@ main .content h1 {
         font-size: .8rem;
         padding: .8rem 2rem;
     }
-    
 }
+@media (max-width:500px) {
+   main #earth-3d {
+      display: block;
+    }
+}
+
+/* about section  */
+
 .about-challenge {
   background: #111;
-  padding: 80px 20px;
+  padding: 80px 0;
   color: #e7e7e7;
   text-align: center;
 }
-
+.about-challenge .container {
+  margin: 0 auto;
+  max-width: 95%;
+}
 .about-challenge h2 {
   font-size: 2.5rem;
   color: #5300a0;
@@ -333,7 +352,7 @@ main .content h1 {
 
 .about-challenge p {
   max-width: 800px;
-  margin: 15px auto;   /* keeps centered */
+  margin: 15px auto;
   font-size: 1.1rem;
   line-height: 1.7;
   color: #ccc;
@@ -343,14 +362,16 @@ main .content h1 {
   color: #9c5ad1;
 }
 
-/* 3rd section */
+/* how it works */
 .how-it-works {
   background: #1a1a1a;
   padding: 80px 20px;
   color: #e7e7e7;
   text-align: center;
 }
-
+.how-it-works .container {
+  margin: 0 auto;
+}
 .how-it-works h2 {
   font-size: 2.5rem;
   color: #5300a0;
@@ -476,7 +497,6 @@ main .content h1 {
 
 
 .visualization {
-  background: #111;
   padding: 80px 20px;
   color: #e7e7e7;
   text-align: center;
@@ -485,7 +505,7 @@ main .content h1 {
 .visualization h2 {
   font-size: 2.5rem;
   color: #5300a0;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 .viz-container {
@@ -556,13 +576,8 @@ main .content h1 {
   }
 }
 
-
-
-
-
 /* --- Why It Matters --- */
 .why-it-matters {
-  background: #111;
   color: #fff;
   padding: 80px 20px;
 }
@@ -627,7 +642,6 @@ main .content h1 {
   background: #111;
   color: #ccc;
   padding: 40px 20px;
-  margin-top: 50px;
 }
 
 .footer-container {
@@ -635,36 +649,40 @@ main .content h1 {
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  gap: 30px;
+  text-align: center;
 }
 
-.footer-links h3 {
+.footer h3 {
   color: #fff;
   margin-bottom: 15px;
   font-size: 1.2rem;
 }
 
-.footer-links ul {
+.footer ul {
   list-style: none;
-  padding: 0;
 }
 
-.footer-links li {
+.footer li {
   margin-bottom: 10px;
 }
 
-.footer-links a {
+.footer a {
   text-decoration: none;
   color: #ccc;
   transition: color 0.3s;
 }
 
-.footer-links a:hover {
+.footer a:hover {
   color: #5300a0;
 }
-
+.footer-credits {
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: -20px;
+}
 .footer-credits p {
   font-size: 0.9rem;
 }
