--- a/3D Design/style.css
+++ b/3D Design/style.css
@@ -318,7 +318,7 @@ main .content h1 {
         font-size: 1rem;
     }
     .btn-get-started {
-        padding: .5rem 1.2rem;
+        padding: 1rem 1.2rem;
         font-size: .8rem;
     }
     .btn-signing-main{
